@@ -36,6 +36,9 @@ opt_no_install=false
 # Use 'sudo' for 'make install'
 opt_usesudo=false
 
+# Accept running under the root user (not recommended)
+opt_accept_root=false
+
 # --no-envscript skip creating script to set environment variables
 opt_no_envscript=false
 
